# AgenticData

./: .gitignore  AGENTS.md  MUIRBENCH_DATA_ANALYSIS_REPORT.md  README.md  iconqa_gpt56_analysis_report.md
autodata_studio/: README.md  run_dev.sh
autodata_studio/backend/: .env.example  pyproject.toml
autodata_studio/backend/autodata/: __init__.py  __main__.py  app.py  config.py  db.py  events.py  feedback.py  models.py  muirbench_taxonomy.py  option_schedule.py  prompt_evolution.py  prompt_pool.py  schema.sql
autodata_studio/backend/autodata/agents/: challenger.py  judge.py  parsing.py  prompts.py  solver.py
autodata_studio/backend/autodata/curation/: content_gates.py  gap.py  loop.py  media_dedupe.py  run_manager.py
autodata_studio/backend/autodata/providers/: __init__.py  anthropic.py  base.py  images.py  mock.py  openai_compat.py  registry.py
autodata_studio/backend/autodata/recipe/: autoresearch.py  grounding.py  recipe_builder.py  source_profiler.py
autodata_studio/backend/scripts/: batch_mcq.py  run_iconqa_10k.sh  run_mcq_10k.sh  sync_mcq_frontend.py  watch_mcq_v2_and_sync.sh
autodata_studio/backend/tests/: smoke.py  test_content_gates.py  test_mcq_scoring.py  test_media_dedupe.py  test_muirbench_taxonomy.py  test_option_schedule.py  test_prompt_pool.py  test_solver.py
datasets/: batch_mcq_muirbench_v1_accepted.jsonl  batch_mcq_v2_auditfix.sync.status  batch_mcq_v2_auditfix_accepted.jsonl  mcq_accepted_sft.jsonl  mcq_audit_sample_50_sft.jsonl
docs/: MCQ_DATA_SYNTHESIS_TECHNICAL.md  MCQ_MODELS_AND_WORKFLOW.md  PLAN_autodata_studio.md  (+2 more)
(+87 files in other folders)
